<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mimir</string>
    <string name="channel_name_service">Main service</string>
    <string name="channel_description_service">Connectivity service</string>
    <string name="channel_name_messages">Messages</string>
    <string name="channel_description_messages">Messages channel</string>
    <string name="channel_name_messages_from_user">Messages from %s</string>
    <string name="channel_description_messages_from_user">Messages from %s</string>
    <string name="channel_name_group_chat">Group %s</string>
    <string name="channel_description_group_chat">Messages from group %s</string>
    <string name="channel_group_direct_messages">Direct Messages</string>
    <string name="channel_group_groups">Group Chats</string>
    <string name="channel_name_calls">Audio calls</string>
    <string name="channel_description_calls">Calls notification channel</string>
    <string name="state_offline">Offline</string>
    <string name="state_online">Online</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_contact">Add contact</string>
    <string name="contact_name">Contact name:</string>
    <string name="contact_pubkey">Public key:</string>
    <string name="contact_address">Contact address:</string>
    <string name="contact_name_hint">Name or nickname</string>
    <string name="contact_rename_hint">New name</string>
    <string name="contact_address_hint" tools:ignore="TypographyEllipsis" translatable="false">200:xxx...</string>
    <string name="contact_pubkey_hint" tools:ignore="TypographyEllipsis" translatable="false">0123456789ABCDEF...</string>
    <string name="add_contact">Add contact</string>
    <string name="add_contact_address">Add address</string>
    <string name="contact_add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="message">Message</string>
    <string name="saved_messages">Saved Messages</string>
    <string name="saved_messages_tip">Save messages, media, and links for quick access</string>
    <string name="my_public_key">My public key:</string>
    <string name="contact_public_key">Public key</string>
    <string name="my_name_title">My name:</string>
    <string name="contact_info">Contact info</string>
    <string name="save_button">Save</string>
    <string name="account">Account</string>
    <string name="my_name_hint">Name or nickname</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="saved">Saved</string>
    <string name="menu_reply">Reply</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_forward">Forward</string>
    <string name="menu_delete">Delete</string>
    <string name="delete_message_dialog_title">Delete message</string>
    <string name="delete_message_dialog_text">Are you sure you want to delete this message?</string>
    <string name="failed_to_delete_message">Failed to delete message</string>
    <string name="mediator_not_connected">Mediator not connected</string>
    <string name="empty_name">You need to enter some name!</string>
    <string name="wrong_public_key">Wrong public key</string>
    <string name="remove_contact">Delete contact and chat</string>
    <string name="rename">Rename</string>
    <string name="rename_contact">Rename contact</string>
    <string name="copy_contact_id">Copy contact ID</string>
    <string name="copy_contact_link">Copy contact link</string>
    <string name="not_yet_implemented">Not yet implemented</string>
    <string name="too_big_picture">Picture file must be less or equal to 5 Mb</string>
    <string name="too_big_picture_resizing">Picture is bigger then 5 Mb, resizing</string>
    <string name="file_too_large">File is too large. Maximum size is 10 MB.</string>
    <string name="contact_added">New contact added</string>
    <string name="contact_already_added">Contact with that key already added</string>
    <string name="you_cant_add_yourself">You can\'t add your own account</string>
    <string name="contact_addition_error_wrong_key">Wrong public key, error adding contact</string>
    <string name="contact_addition_error_parsing_error">URL parsing error, cannot add contact</string>
    <string name="empty_uri">Empty URI</string>
    <string name="unknown_nickname">Unknown</string>
    <string name="ip_cache_title">How long to cache IP addresses?</string>
    <string name="one_hour">1 hour</string>
    <string name="three_hours">3 hours</string>
    <string name="six_hours">6 hours</string>
    <string name="twelve_hours">12 hours</string>
    <string name="one_day">1 day</string>
    <string name="three_days">3 days</string>
    <string name="fifteen_days">15 days</string>
    <string name="tracker_ping_time">Tracker ping was %d seconds ago</string>
    <string name="share">Share</string>
    <string name="activity_not_found">Activity not found.</string>
    <string name="action_about">About</string>
    <string name="about_title">About Mimir</string>
    <string name="app_version_label" translatable="false">Version: 1.0.0 (Build 1)</string>
    <string name="links_label">Links</string>
    <string name="libs_label">Used libraries</string>
    <string name="libs_used" translatable="false">\n
• Yggdrasil Network (LGPLv3)\n
• AndroidX (Apache 2.0)\n
• Material Components (Apache 2.0)\n
• BouncyCastle (MIT)\n
• And others…
</string>
    <string name="make_call">Call</string>
    <string name="mimir_call">Mimir call</string>
    <string name="call_answer">Answer</string>
    <string name="call_decline">Decline</string>
    <string name="toast_no_permission">You must give that permission.</string>
    <string name="peer_url">Peer URL:</string>
    <string name="peer_url_hint">tcp://1.2.3.4:1234 or tls://example.com:443</string>
    <string name="add_to_power_exceptions">Battery optimization is on. Add the app to power exceptions to allow background work.</string>
    <string name="allow">Allow</string>
    <string name="allow_notifications_snack">Notifications are disabled for this app. Please, allow them to get messages and calls.</string>
    <string name="select_contact_to_share">Select contact</string>
    <string name="select_chat_to_forward">Select chat to forward to</string>
    <string name="message_saved_to_saved_messages">Message saved to Saved Messages</string>
    <string name="file_saved_to_downloads">File saved to Downloads/Mimir</string>
    <string name="show">Show</string>
    <string name="forwarded_message">Forwarded message</string>
    <string name="add_custom_peer">Add custom peer</string>
    <string name="add_button">Add</string>
    <string name="audio_call_incoming">Incoming audio call</string>
    <string name="audio_call_outgoing">Outgoing audio call</string>
    <string name="call_already_ongoing">Call already in progress!</string>
    <string name="draft">Draft</string>
    <string name="draft_image">Image</string>
    <string name="draft_file">File</string>
    <string name="draft_attachment">Attachment</string>
    <string name="updates_title">Mimir update</string>
    <string name="new_version_title">New version %s is available!</string>
    <string name="old_version_title">Current %s</string>
    <string name="changelogs">New in this version:</string>
    <string name="button_download">Download</string>
    <string name="downloading_update">Downloading update…</string>
    <string name="new_version_available">New version %1$s available</string>
    <string name="tap_to_see_what_s_new">Tap to see what’s new</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="already_last_version">No new version available.</string>
    <string name="error_checking_updates">Error checking for updates: %s</string>
    <string name="channel_name_update_download">Update downloads</string>
    <string name="channel_description_update_download">Shows progress when downloading app updates</string>
    <string name="downloading_update_progress">Downloading update %1$s (%2$d%%)</string>
    <string name="download_failed">Download failed</string>
    <string name="configure_peers">Configure peers</string>
    <string name="use_default_peers">Use default peers</string>
    <string name="custom_peers">Custom Peers</string>
    <string name="add_peer">Add peer</string>
    <string name="status_connecting">Connecting…</string>
    <string name="status_ringing">Ringing…</string>
    <string name="status_error_connecting">Error connecting :(</string>
    <string name="github">Mimir on GitHub</string>
    <string name="patreon">My Patreon</string>
    <string name="yggdrasil_network">Yggdrasil Network</string>
    <string name="version_and_build_title">Version: %1$s (Build %2$d)</string>
    <string name="collect_logs">Collect logs</string>
    <string name="logs">Logs</string>
    <string name="share_logs">Share logs</string>
    <string name="no_logs_to_share">No logs to share</string>
    <string name="export_logs">Export logs</string>
    <string name="select_log_interval">Select log interval</string>
    <string name="interval_10_minutes">10 minutes</string>
    <string name="interval_30_minutes">30 minutes</string>
    <string name="interval_60_minutes">60 minutes</string>
    <string name="interval_24_hours">24 hours</string>
    <string name="exporting_logs">Exporting logs…</string>
    <string name="logs_exported">Logs exported successfully</string>
    <string name="error_exporting_logs">Error exporting logs: %s</string>
    <string name="configure_peers_description">Configure peers for connection to the Yggdrasil Network.</string>
    <string name="automatic_updates_checking">Automatic updates checking</string>
    <string name="automatic_updates_checking_desc">Check for updates automatically every hour.</string>
    <string name="action_about_desc"><![CDATA[Get info about app & it\'s version]]></string>
    <string name="action_exit">Exit Mimir</string>
    <string name="action_exit_desc">Close the application and stop all connections</string>
    <string name="exit_confirmation_title">Exit Mimir?</string>
    <string name="exit_confirmation_message">This will stop all connections and close the app. You will not be able to get any messages.</string>
    <string name="collect_logs_desc">Collect logcat logs to assist in fixing the bugs.</string>
    <string name="check_for_updates_desc">Check for updates right now.</string>
    <string name="enable_domain_links">Please, enable Mimir to open links for it\'s own domain.</string>
    <string name="enable">Enable</string>
    <string name="resize_big_pics">Resize big images</string>
    <string name="resize_big_pics_desc">Before sending resize images bigger than 5 megabytes.</string>
    <string name="image_settings">Image settings</string>
    <string name="select_resize_size">Resize images to this size:</string>
    <string name="select_resize_quality">Resave with another quality:</string>
    <string name="mute_contact">Mute</string>
    <string name="clear_history">Clear history</string>
    <string name="clear">Clear</string>
    <string name="clear_history_confirm_text">Are you sure you want to delete all messages? This action cannot be undone. The contact/chat will remain.</string>
    <string name="block_contact">Block contact</string>
    <string name="group_invites">Group Invites</string>
    <string name="create_chat">Create group</string>
    <string name="group_info">Group info</string>
    <string name="add_member">Add member</string>
    <string name="mute_group">Mute group</string>
    <string name="leave_group">Leave group</string>
    <string name="font_size_settings">Font size settings</string>
    <string name="message_text_size_label">Message text size:</string>
    <string name="font_size_preview_label">Preview:</string>
    <string name="font_size_preview_text">This is a preview of how your messages will look with the selected font size.</string>
</resources>