<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/contact_call"
        android:orderInCategory="1"
        android:title="@string/make_call"
        android:icon="@drawable/ic_phone_outline"
        app:showAsAction="always" />
    <item android:id="@+id/mute_contact"
        android:title="@string/mute_contact"
        android:icon="@drawable/ic_volume_off"
        app:showAsAction="never" />
    <item android:id="@+id/block_contact"
        android:title="@string/block_contact"
        android:icon="@drawable/ic_block_user"
        app:showAsAction="never" />
    <item android:id="@+id/clear_history"
        android:title="@string/clear_history"
        android:icon="@drawable/ic_clean_chat_outline"
        app:showAsAction="never" />
    <item android:id="@+id/remove_contact"
        android:icon="@drawable/ic_contact_remove"
        android:title="@string/remove_contact"
        app:showAsAction="never" />
</menu>