<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/plus"
        android:orderInCategory="1"
        android:title="@string/action_add_contact"
        android:icon="@drawable/ic_contact_add"
        app:showAsAction="always" />
    <item android:id="@+id/group_invites"
        android:orderInCategory="2"
        android:title="@string/group_invites"
        android:icon="@drawable/ic_message_alert_outline"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/create_chat"
        android:orderInCategory="3"
        android:title="@string/create_chat"
        android:icon="@drawable/ic_message_plus_outline"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom" />
</menu>