<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/contact_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/contact_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_name_hint" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="2dp"
        android:text="@string/contact_pubkey" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/contact_pubkey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_pubkey_hint" />

</androidx.appcompat.widget.LinearLayoutCompat>