<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="@string/font_size_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/MimirToolbar"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/labels_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/font_size_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
            android:text="@string/message_text_size_label" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/font_size_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
            tools:text="15sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <SeekBar
        android:id="@+id/font_size_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/labels_container" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/preview_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
        android:text="@string/font_size_preview_label"
        app:layout_constraintTop_toBottomOf="@id/font_size_seekbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/preview_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/message_background"
        android:paddingStart="12dp"
        android:paddingTop="6dp"
        android:paddingEnd="8dp"
        android:paddingBottom="6dp"
        app:layout_constraintTop_toBottomOf="@id/preview_label">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/preview_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/font_size_preview_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
